@@ -62,9 +62,29 @@ addSoccerVar('BallMass',0.026)
 addSoccerVar('RuleGoalPauseTime',3.0)
 addSoccerVar('RuleKickInPauseTime',1.0)
 addSoccerVar('RuleHalfTime',5.0 * 60)
-addSoccerVar('RuleDropBallTime',30)
+addSoccerVar('RuleDropBallTime',15)   
 addSoccerVar('SingleHalfTime', false)
 addSoccerVar('UseOffside',false)
+
+# auto ref parameters  FCP 2010
+addSoccerVar('NotStandingMaxTime',30)       
+addSoccerVar('GoalieNotStandingMaxTime',60)
+addSoccerVar('GroundMaxTime',15)    
+addSoccerVar('GoalieGroundMaxTime', 30)     
+addSoccerVar('MaxPlayersInsideOwnArea',3)
+addSoccerVar('MinOppDistance',0.8)       
+addSoccerVar('Min2PlDistance',0.4)       
+addSoccerVar('Min3PlDistance',1.0)      
+
+# auto ref parameters for testing (not for use in competition...)
+#addSoccerVar('NotStandingMaxTime',10)       
+#addSoccerVar('GoalieNotStandingMaxTime',30)
+#addSoccerVar('GroundMaxTime', 5)    
+#addSoccerVar('GoalieGroundMaxTime', 5)     
+#addSoccerVar('MaxPlayersInsideOwnArea',2)
+#addSoccerVar('MinOppDistance',1.0)       
+#addSoccerVar('Min2PlDistance',0.6)       
+#addSoccerVar('Min3PlDistance',1.5)      
 
 # recorders
 addSoccerVar('BallRecorder',"Ball/geometry/recorder")
